Fix visibility of stars.

--- a/src/Client/src/Universe/Styles/Simulator.scss
+++ b/src/Client/src/Universe/Styles/Simulator.scss
@@ -1,10 +1,11 @@
 .universe {
 
     &__label {
-        color: $lightest-color;
+        color: #FFF;
         cursor: pointer;
         font-size: 80%;
         position: absolute;
+        text-shadow:  0 0 0.5rem #000;
         top: 0;
         white-space: pre;
         z-index: 1000;
